subprojects {
	apply plugin: 'java'
	apply plugin: 'maven-publish'

	java.toolchain.languageVersion = JavaLanguageVersion.of(21)
	java.withSourcesJar()

	repositories {
		mavenCentral()

		maven {
			name = 'Sponge / Mixin'
			url = 'https://repo.spongepowered.org/repository/maven-public/'
		}

		maven {
			name = "Forge"
			url = 'https://maven.minecraftforge.net'
		}
	}

	tasks.withType(JavaCompile).configureEach {
		it.options.encoding = 'UTF-8'
		it.options.release = 21
	}

	tasks.withType(GenerateModuleMetadata) {
		enabled = false
	}

	publishing {
		repositories {
			maven {
				name = "Cloudsmith"
				url 'https://maven.cloudsmith.io/tslat/sbl/'
				credentials {
					username System.getenv("CLOUDSMITH_USERNAME")
					password System.getenv("CLOUDSMITH_API_KEY")
				}
			}
		}
	}
}
